@startuml

abstract class AbstractEnemyFactory {
    + {abstract} createEnemy(): AbstractEnemy
}

class EliteEnemyFactory extends AbstractEnemyFactory {
    + createEnemy(): EliteEnemy
}

class MobEnemyFactory extends AbstractEnemyFactory {
    + createEnemy(): MobEnemy
}

class BossEnemyFactory extends AbstractEnemyFactory {
    + createEnemy(): BossEnemy
}

EliteEnemyFactory ..> EliteEnemy
MobEnemyFactory ..> MobEnemy
BossEnemyFactory ..> BossEnemy

AbstractGenerateStrategy -> AbstractEnemyFactory

@enduml